Update textarea font. Fix gradient background so it doesn't repeat on small screens.
Add link to startfunction.com. Add GA.

--- a/app/style.scss
+++ b/app/style.scss
@@ -5,9 +5,9 @@ html {
 body {
 	padding-top: 5rem;
 	font: 1.4rem/1.9rem -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-	background: linear-gradient(0deg, #ffdcf8 0%, #aeb6f3 100%);
+	background: linear-gradient(0deg, #ffdcf8 0%, #aeb6f3 100%) no-repeat fixed;
 	height: 100vh;
-	color: #4e4a84
+	color: #4e4a84;
 }
 
 a {
@@ -31,6 +31,7 @@ h2 {
 textarea, button, input[type=text], input[type=search] {
 	-webkit-appearance: none;
 	font-size: 1.4rem;
+	font-family: inherit;
 	border: 1px solid #d1cbde;
 	color: #484561;
 	outline: 0;
@@ -173,4 +174,5 @@ button {
 	margin: 20px auto;
 	font-size: 1.2rem;
 	color: #7e7aad;
+	min-height: 50px;
 }
